# mcp-perplexica

./: .env.example  .env.perplexica.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  dependencies.py  main.py
src/application/: api.py  requests.py  use_cases.py
src/domain/: entities.py  ports.py
src/infrastructure/perplexica/: adapter.py
tests/doubles/: search_port_double.py
tests/unit/: test_use_cases.py
